# firefighter_yearly_report

./: .gitignore  README.md  pyproject.toml  sandbox.ipynb  setup.py
src/: constants.py  html.py  mail.py  main.py  plots.py
