[project]
name = "firefighter_yearly_report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "setuptools>=76.0.0",
    "weasyprint>=64.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
